MH-4841 fixed scrollbars problems in AdminUI
git-svn-id: https://opencast.jira.com/svn/MH/trunk@8334 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -37,6 +37,7 @@ td {
 select { font-size:1.15em; }
 
 .wu-tab-content {
+	overflow:hidden;
 }
 
 .force-space-12px {
